[package]
name = "mgrep"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-recursion = "1.0.4"
crossbeam = "0.8.2"
num_cpus = "1.15.0"
structopt = "0.3.26"
tokio = { version = "1.28.2", features = ["full"] }
